--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "prepare": "husky",
-    "deploy-storybook": "storybook-to-ghpages"
+    "prepare": "husky"
   },
   "dependencies": {
     "@fontsource-variable/inter": "^5.0.17",
