--- a/.github/workflows/deploy-storybook.yml
+++ b/.github/workflows/deploy-storybook.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main # or your default branch
 
+permissions:
+  contents: write
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -29,3 +32,4 @@ jobs:
         with:
           folder: storybook-static
           branch: gh-pages
+          token: ${{ secrets.GITHUB_TOKEN }}
